--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <p>Emma's Best Paragraph Ever</p>
 
-<p><b>I am so <i>bored</i></b></p>
+<p><b>I am so <i>fun</i></b></p>
 
 <p>wow look at this awesome line <br> break</p>
 
