--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
- <a href="/turbulance.html">FINAL PROJECT</a>
+ <a href="emmacai.github.io/turbulance.html">FINAL PROJECT</a>
 
 <div id="goldenframe">
     <a href="https://goo.gl/maps/xuBv3bn6JGQ2" target="_blank">
